[gd_scene load_steps=28 format=2]

[ext_resource path="res://level/TilesetPadat.tres" type="TileSet" id=1]
[ext_resource path="res://karakter/Hero.tscn" type="PackedScene" id=2]
[ext_resource path="res://level/Level1.gd" type="Script" id=22]
[ext_resource path="res://level/TilesetTembus.tres" type="TileSet" id=23]
[ext_resource path="res://assets/Palm Tree Island/Background/BG Image.png" type="Texture" id=24]
[ext_resource path="res://assets/Palm Tree Island/Background/Additional Sky.png" type="Texture" id=25]
[ext_resource path="res://assets/Palm Tree Island/Background/Additional Water.png" type="Texture" id=26]
[ext_resource path="res://assets/Palm Tree Island/Background/Big Clouds.png" type="Texture" id=27]
[ext_resource path="res://assets/Palm Tree Island/Background/Small Cloud 1.png" type="Texture" id=28]
[ext_resource path="res://obyek/koin/Koin.tscn" type="PackedScene" id=29]
[ext_resource path="res://karakter/Musuh.tscn" type="PackedScene" id=30]
[ext_resource path="res://assets/Wood and Paper UI/Life Bars/Big Bars/1.png" type="Texture" id=31]
[ext_resource path="res://assets/Wood and Paper UI/Life Bars/Big Bars/4.png" type="Texture" id=32]
[ext_resource path="res://assets/Wood and Paper UI/Life Bars/Colors/1.png" type="Texture" id=33]
[ext_resource path="res://assets/Pirate Treasure/Gold Coin/01.png" type="Texture" id=38]
[ext_resource path="res://assets/Wood and Paper UI/Small Banner/1.png" type="Texture" id=39]
[ext_resource path="res://assets/Wood and Paper UI/Small Banner/13.png" type="Texture" id=40]
[ext_resource path="res://assets/Folks-Normal.ttf" type="DynamicFontData" id=41]
[ext_resource path="res://GUI/TombolPopup.tres" type="StyleBox" id=42]
[ext_resource path="res://assets/Wood and Paper UI/Prefabs/6.png" type="Texture" id=43]
[ext_resource path="res://GUI/TombolFont.tres" type="DynamicFont" id=44]
[ext_resource path="res://GUI/PopupKalah.gd" type="Script" id=45]
[ext_resource path="res://GUI/PopupMenang.gd" type="Script" id=46]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 414, 22 )

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 41 )

[sub_resource type="DynamicFont" id=7]
size = 12
extra_spacing_bottom = 6
font_data = ExtResource( 41 )

[node name="Level1" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 22 )

[node name="TileMapPadat" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 5
format = 1
tile_data = PoolIntArray( -65538, 4, 0, -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131064, 4, 0, -131063, 4, 0, -131062, 4, 0, -131061, 4, 0, -131060, 4, 0, -131059, 4, 0, -131058, 4, 0, -131057, 4, 0, -131056, 4, 0, -131055, 4, 0, -131054, 4, 0, -131053, 4, 0, -131052, 4, 0, -131051, 4, 0, -131050, 4, 0, -131049, 4, 0, -131048, 4, 0, -131047, 4, 0, -131046, 4, 0, -131045, 4, 0, -131044, 4, 0, -131043, 4, 0, -131042, 4, 0, -131041, 4, 0, -131040, 4, 0, -131039, 4, 0, -131038, 4, 0, -2, 4, 0, -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, 7, 0, -65522, 7, 0, -65521, 7, 0, -65520, 7, 0, -65519, 7, 0, -65518, 4, 0, -65517, 4, 0, -65516, 4, 0, -65515, 4, 0, -65514, 4, 0, -65513, 4, 0, -65512, 4, 0, -65511, 4, 0, -65510, 4, 0, -65509, 4, 0, -65508, 4, 0, -65507, 4, 0, -65506, 4, 0, -65505, 4, 0, -65504, 4, 0, -65503, 4, 0, -65502, 4, 0, 65534, 4, 0, 65535, 4, 0, 0, 15, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 4, 0, 8, 4, 0, 9, 7, 0, 10, 7, 0, 11, 4, 0, 12, 5, 0, 18, 6, 0, 19, 7, 0, 20, 7, 0, 21, 7, 0, 22, 7, 0, 23, 7, 0, 24, 7, 0, 25, 7, 0, 26, 7, 0, 27, 7, 0, 28, 7, 0, 29, 7, 0, 30, 7, 0, 31, 7, 0, 32, 4, 0, 33, 4, 0, 34, 4, 0, 131070, 4, 0, 131071, 4, 0, 65536, 5, 0, 65543, 6, 0, 65544, 8, 0, 65547, 3, 0, 65548, 5, 0, 65568, 3, 0, 65569, 4, 0, 65570, 4, 0, 196606, 4, 0, 196607, 4, 0, 131072, 5, 0, 131083, 6, 0, 131084, 7, 0, 131085, 13, 0, 131086, 13, 0, 131087, 13, 0, 131088, 14, 0, 131104, 3, 0, 131105, 4, 0, 131106, 4, 0, 262142, 4, 0, 262143, 4, 0, 196608, 5, 0, 196635, 12, 0, 196636, 13, 0, 196637, 13, 0, 196638, 13, 0, 196639, 13, 0, 196640, 4, 0, 196641, 4, 0, 196642, 4, 0, 327678, 4, 0, 327679, 4, 0, 262144, 5, 0, 262168, 34, 0, 262176, 3, 0, 262177, 4, 0, 262178, 4, 0, 393214, 4, 0, 393215, 4, 0, 327680, 5, 0, 327696, 0, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 35, 0, 327712, 3, 0, 327713, 4, 0, 327714, 4, 0, 458750, 4, 0, 458751, 4, 0, 393216, 5, 0, 393232, 3, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 5, 0, 393248, 3, 0, 393249, 4, 0, 393250, 4, 0, 524286, 4, 0, 524287, 4, 0, 458752, 17, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 35, 0, 458762, 0, 0, 458763, 1, 0, 458764, 1, 0, 458765, 35, 0, 458768, 3, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 458772, 4, 0, 458773, 5, 0, 458776, 0, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 35, 0, 458784, 3, 0, 458785, 4, 0, 458786, 4, 0, 589822, 4, 0, 589823, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 5, 0, 524298, 3, 0, 524299, 4, 0, 524300, 4, 0, 524301, 5, 0, 524304, 3, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 4, 0, 524309, 5, 0, 524312, 3, 0, 524313, 4, 0, 524314, 4, 0, 524315, 4, 0, 524316, 5, 0, 524320, 3, 0, 524321, 4, 0, 524322, 4, 0 )

[node name="TileMapTembus" type="TileMap" parent="."]
tile_set = ExtResource( 23 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 262148, 0, 0, 262149, 1, 0, 262150, 1, 0, 262151, 2, 0, 262154, 0, 0, 262155, 1, 0, 262156, 1, 0, 262157, 2, 0, 327684, 3, 0, 327685, 4, 0, 327686, 4, 0, 327687, 5, 0, 327690, 3, 0, 327691, 4, 0, 327692, 4, 0, 327693, 5, 0, 393220, 3, 0, 393221, 4, 0, 393222, 4, 0, 393223, 5, 0, 393226, 3, 0, 393227, 4, 0, 393228, 4, 0, 393229, 5, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="TileMapTembus"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapTembus/StaticBody2D"]
position = Vector2( 192, 138 )
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TileMapTembus/StaticBody2D"]
position = Vector2( 384, 138 )
shape = SubResource( 4 )
one_way_collision = true

[node name="Hero2" parent="." instance=ExtResource( 2 )]
position = Vector2( 97, 74 )

[node name="ZonaJatuh" type="Area2D" parent="."]
position = Vector2( 639, 316 )
collision_layer = 16
collision_mask = 5
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaJatuh"]
shape = SubResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Langit" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_offset = Vector2( 0, -140 )
motion_mirroring = Vector2( 384, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Langit"]
position = Vector2( 0, 128 )
texture = ExtResource( 24 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Langit"]
scale = Vector2( 12, 4 )
texture = ExtResource( 25 )
centered = false

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Langit"]
position = Vector2( 0, 256 )
scale = Vector2( 12, 2.75 )
texture = ExtResource( 26 )
centered = false

[node name="AwanBesar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, -100 )
motion_mirroring = Vector2( 448, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/AwanBesar"]
modulate = Color( 1, 1, 1, 0.462745 )
position = Vector2( 0, 96 )
texture = ExtResource( 27 )
centered = false

[node name="AwanKecil" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/AwanKecil"]
position = Vector2( 280, 48 )
texture = ExtResource( 28 )
centered = false

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/AwanKecil"]
position = Vector2( 48, 63.5 )
texture = ExtResource( 28 )
centered = false

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/AwanKecil"]
position = Vector2( 472, 88 )
texture = ExtResource( 28 )
centered = false

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/AwanKecil"]
position = Vector2( 704, 64 )
texture = ExtResource( 28 )
centered = false

[node name="TempatKoin" type="Node2D" parent="."]

[node name="Koin" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 178, 208 )

[node name="Koin4" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 353, 208 )

[node name="Koin5" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 385, 208 )

[node name="Koin6" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 417, 208 )

[node name="Koin7" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 441, 48 )

[node name="Koin8" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 465, 48 )

[node name="Koin9" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 489, 48 )

[node name="Koin10" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 641, 144 )

[node name="Koin11" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 673, 144 )

[node name="Koin12" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 657, 120 )

[node name="Koin13" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 641, 96 )

[node name="Koin14" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 673, 96 )

[node name="Koin15" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 785, 112 )

[node name="Koin16" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 785, 88 )

[node name="Koin17" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 785, 64 )

[node name="Koin18" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 1009, 80 )

[node name="Koin19" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 985, 80 )

[node name="Koin20" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 961, 80 )

[node name="Koin21" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 913, 208 )

[node name="Koin22" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 929, 184 )

[node name="Koin23" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 945, 160 )

[node name="Koin2" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 193, 208 )

[node name="Koin3" parent="TempatKoin" groups=[
"GrupKoin",
] instance=ExtResource( 29 )]
position = Vector2( 225, 208 )

[node name="GrupMusuh" type="Node2D" parent="."]

[node name="Musuh" parent="GrupMusuh" instance=ExtResource( 30 )]
position = Vector2( 65, 208 )
arah = -1
stamina = 2

[node name="Musuh2" parent="GrupMusuh" instance=ExtResource( 30 )]
position = Vector2( 161, 112 )
arah = -1
stamina = 5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="Control" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 77.0
margin_bottom = 32.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HealthBar"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HealthBar/HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture = ExtResource( 31 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/HealthBar/HBoxContainer"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 40.0
texture = ExtResource( 32 )

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/HealthBar"]
margin_left = 17.0
margin_top = 14.0
margin_right = 60.0
margin_bottom = 16.0
value = 100.0
texture_progress = ExtResource( 33 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinBar" type="Control" parent="CanvasLayer"]
margin_left = 256.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CoinBar"]
margin_right = 64.0
margin_bottom = 32.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CoinBar/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 39 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/CoinBar/HBoxContainer"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 40 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CoinBar"]
margin_left = 18.0
margin_top = 6.0
margin_right = 34.0
margin_bottom = 22.0
texture = ExtResource( 38 )

[node name="Label" type="Label" parent="CanvasLayer/CoinBar"]
margin_left = 34.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="PopupKalah" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -250.0
margin_right = 64.0
margin_bottom = -122.0
script = ExtResource( 45 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PopupKalah"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 43 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PopupKalah"]
margin_left = 33.0
margin_top = 24.0
margin_right = 95.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="CanvasLayer/PopupKalah/VBoxContainer"]
margin_right = 62.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 7 )
text = "Yah, Kalah!"

[node name="TmblUlangi" type="Button" parent="CanvasLayer/PopupKalah/VBoxContainer"]
margin_top = 24.0
margin_right = 62.0
margin_bottom = 50.9678
custom_styles/hover = ExtResource( 42 )
custom_styles/pressed = ExtResource( 42 )
custom_styles/focus = ExtResource( 42 )
custom_styles/disabled = ExtResource( 42 )
custom_styles/normal = ExtResource( 42 )
custom_fonts/font = ExtResource( 44 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ulangi"

[node name="TmblKeluar" type="Button" parent="CanvasLayer/PopupKalah/VBoxContainer"]
margin_top = 54.0
margin_right = 62.0
margin_bottom = 80.9678
custom_styles/hover = ExtResource( 42 )
custom_styles/pressed = ExtResource( 42 )
custom_styles/focus = ExtResource( 42 )
custom_styles/disabled = ExtResource( 42 )
custom_styles/normal = ExtResource( 42 )
custom_fonts/font = ExtResource( 44 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Keluar"

[node name="Tween" type="Tween" parent="CanvasLayer/PopupKalah"]

[node name="PopupMenang" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -250.0
margin_right = 64.0
margin_bottom = -122.0
script = ExtResource( 46 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PopupMenang"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 43 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PopupMenang"]
margin_left = 27.0
margin_top = 37.0
margin_right = 101.0
margin_bottom = 91.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/PopupMenang/VBoxContainer"]
margin_right = 74.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 7 )
text = "Yay, Menang!"

[node name="TmblKeluar" type="Button" parent="CanvasLayer/PopupMenang/VBoxContainer"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 54.9678
custom_styles/hover = ExtResource( 42 )
custom_styles/pressed = ExtResource( 42 )
custom_styles/focus = ExtResource( 42 )
custom_styles/disabled = ExtResource( 42 )
custom_styles/normal = ExtResource( 42 )
custom_fonts/font = ExtResource( 44 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Selanjutnya"

[node name="Tween" type="Tween" parent="CanvasLayer/PopupMenang"]

[connection signal="body_entered" from="ZonaJatuh" to="." method="_on_ZonaJatuh_body_entered"]
[connection signal="pressed" from="CanvasLayer/PopupKalah/VBoxContainer/TmblUlangi" to="CanvasLayer/PopupKalah" method="_on_TmblUlangi_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupKalah/VBoxContainer/TmblKeluar" to="CanvasLayer/PopupKalah" method="_on_TmblKeluar_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupMenang/VBoxContainer/TmblKeluar" to="CanvasLayer/PopupMenang" method="_on_TmblKeluar_pressed"]
